--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
       </div>
 
       <div class="card-infor">
-        <img class="card-item" src="assets/san-pham/3.png" alt="Bảo hiểm sức khoẻ" srcset="">
+        <img onclick="window.location.href='/baohiemsuckhoe.html'" class="card-item" src="assets/san-pham/3.png"
+          alt="Bảo hiểm sức khoẻ" srcset="">
         <img class="card-item" src="assets/san-pham/1.png" alt="Bảo hiểm ô tô" srcset="">
         <img class="card-item" src="assets/san-pham/2.png" alt="Bảo hiểm cháy nổ" srcset="">
         <img class="card-item" src="assets/san-pham/6.png" alt="Bảo hiểm du lịch" srcset="">
@@ -107,7 +108,7 @@
       style="font-size: 25px; text-transform: uppercase; font-weight: 600; color: #0060ae; text-align: center; margin: 0; margin-top: 50px;">
       Các sản phẩm nổi bật</p>
     <section class="container-list" style="justify-content: center;">
-      <div class="card">
+      <div class="card" onclick="window.location.href='/baohiemsuckhoe.html'">
         <img src="assets/1.png" alt="Chăm sóc y tế cao cấp" style="height: 240px; object-fit: cover;">
         <div class="card-content">
           <h3>Bảo lãnh viện phí
