--- a/baohiemsuckhoe.html
+++ b/baohiemsuckhoe.html
@@ -37,8 +37,7 @@
         <div style="display: flex; flex-direction: column; gap: 10px; width: 60%;">
           <p
             style="text-transform: capitalize; font-size: 24px; font-weight: 600; color: #0060ae; margin: 0; line-height: normal;">
-            Bảo hiểm An
-            Gia</p>
+            Bảo Việt An Gia</p>
           <p style="margin: 0; font-size: 14px;">
             Bạn và gia đình sẽ được bảo vệ toàn diện với các quyền lợi liên quan đến chi phí y tế, phẫu thuật, và nhập
             viện khi không may xảy ra sự cố.
@@ -46,23 +45,62 @@
         </div>
         <div>
           <p style="margin: 0 0;">Phí bảo hiểm từ: <b
-              style="font-weight: 600; font-size: 24px; color:#0060ae">1.196.000đ</b></p>
+              style="font-weight: 600; font-size: 24px; color:#0060ae">1.196.000đ/Năm</b></p>
         </div>
       </div>
       <div style="  padding: 0 30px; padding-bottom: 10px;">
         <div style="display: flex; gap: 10px; align-items: center;">
-          <img style="height: 18px;" class="nav_icon mr-lg-2"
-            src="https://baovietonline.com.vn/templates/images/icon_hotline.png" alt="">
-          <a style="font-size: 14px; margin: 0; cursor: pointer;">0905.499.496</a>
+          <img style="height: 25px; width: 25px;" class="nav_icon mr-lg-2"
+            src="https://seeklogo.com/images/Z/zalo-logo-BB6C937412-seeklogo.com.png" alt="">
+          <a style="font-size: 14px; margin: 0; cursor: pointer;" href="https://zalo.me/84905.499.496">0905.499.496</a>
         </div>
+      </div>
+    </div>
+
+    <div class="infor-item" style="width: 75%; margin: 50px auto; display: flex; gap: 20px;">
+      <div class="hightlight-btn">
+        <img class="hightlight-btn-img"
+          src="https://baovietonline.com.vn/uploads/product/27720c8da207e15f5055740e1e37bdb3.png" alt="" srcset="">
+        <p style="font-size: 14px;">Được thiết kế phù hợp với từng đối tượng</p>
+      </div>
+      <div class="hightlight-btn">
+        <img class="hightlight-btn-img"
+          src="https://baovietonline.com.vn/uploads/product/8d2eb45d70eb18a4e1e332668fb88f0a.png" alt="" srcset="">
+        <p style="font-size: 14px;">Thủ tục tham gia bảo hiểm đơn giản, nhanh chóng</p>
+      </div>
+      <div class="hightlight-btn">
+        <img class="hightlight-btn-img"
+          src="https://baovietonline.com.vn/uploads/product/efe0a6482df11d40651bde5f1e6245aa.png" alt="" srcset="">
+        <p style="font-size: 14px;">Phí bảo hiểm cạnh tranh</p>
+      </div>
+      <div class="hightlight-btn">
+        <img class="hightlight-btn-img"
+          src="https://baovietonline.com.vn/uploads/product/30d94f701695eed40129a337f4ae6668.png" alt="" srcset="">
+        <p style="font-size: 14px;">Dịch vụ chăm sóc tận tình bởi hệ thống 79 CTTV trên toàn quốc</p>
+      </div>
+      <div class="hightlight-btn">
+        <img class="hightlight-btn-img"
+          src="https://baovietonline.com.vn/uploads/product/14362d8a9992b0f7ca306f4d00d2ee26.png" alt="" srcset="">
+        <p style="font-size: 14px;">Giải quyết bồi thường nhanh chóng, chính xác</p>
       </div>
     </div>
 
     <div class="infor-item" style="width: 75%; margin: 50px auto;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
-        Quyền
-        lợi chính</p>
+        Đối tượng</p>
+      <div>
+        <ul style="list-style:disc">
+          <li>Khách hàng cá nhân, hộ gia đình và doanh nghiệp nhỏ dưới 3 nhân viên</li>
+          <li>Độ tuổi được bảo hiểm: từ 15 ngày tuổi tới 65 tuổi</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="infor-item" style="width: 75%; margin: 50px auto;">
+      <p
+        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        Quyền lợi chính</p>
       <div>
         <table border="0" cellpadding="0" cellspacing="0" style="width:100%" class="table table-bordered">
           <thead>
@@ -462,201 +500,199 @@
         <table style="width: 100%;">
           <thead>
             <tr>
-              <th>Age Group</th>
-              <th>Bronze (Đồng)</th>
-              <th>Silver (Bạc)</th>
-              <th>Gold (Vàng)</th>
-              <th>Platinum (Bạch Kim)</th>
-              <th>Diamond (Kim Cương)</th>
+              <th>Nhóm Tuổi</th>
+              <th>Đồng (Bronze)</th>
+              <th>Bạc (Silver)</th>
+              <th>Vàng (Gold)</th>
+              <th>Bạch Kim (Platinum)</th>
+              <th>Kim Cương (Diamond)</th>
             </tr>
           </thead>
           <tbody>
             <tr class="section-title">
-              <td colspan="6">A. Main Insurance - Inpatient Treatment for Illness & Accidents</td>
+              <td colspan="6">A. Bảo hiểm Chính - Điều trị Nội trú cho Bệnh Tật & Tai Nạn</td>
             </tr>
             <tr>
-              <td>1 - 3 years</td>
-              <td>2,585,000</td>
-              <td>3,707,000</td>
-              <td>5,616,000</td>
-              <td>7,582,000</td>
-              <td>9,267,000</td>
+              <td>1 - 3 tuổi</td>
+              <td>2.585.000</td>
+              <td>3.707.000</td>
+              <td>5.616.000</td>
+              <td>7.582.000</td>
+              <td>9.267.000</td>
             </tr>
             <tr>
-              <td>4 - 6 years</td>
-              <td>1,450,000</td>
-              <td>2,081,000</td>
-              <td>3,153,000</td>
-              <td>4,257,000</td>
-              <td>5,203,000</td>
+              <td>4 - 6 tuổi</td>
+              <td>1.450.000</td>
+              <td>2.081.000</td>
+              <td>3.153.000</td>
+              <td>4.257.000</td>
+              <td>5.203.000</td>
             </tr>
             <tr>
-              <td>7 - 9 years</td>
-              <td>1,320,000</td>
-              <td>1,900,000</td>
-              <td>2,867,000</td>
-              <td>3,870,000</td>
-              <td>4,730,000</td>
+              <td>7 - 9 tuổi</td>
+              <td>1.320.000</td>
+              <td>1.900.000</td>
+              <td>2.867.000</td>
+              <td>3.870.000</td>
+              <td>4.730.000</td>
             </tr>
             <tr>
-              <td>10 - 18 years</td>
-              <td>1,255,800</td>
-              <td>1,801,800</td>
-              <td>2,730,800</td>
-              <td>3,685,500</td>
-              <td>4,504,500</td>
+              <td>10 - 18 tuổi</td>
+              <td>1.255.800</td>
+              <td>1.801.800</td>
+              <td>2.730.800</td>
+              <td>3.685.500</td>
+              <td>4.504.500</td>
             </tr>
             <tr>
-              <td>19 - 30 years</td>
-              <td>1,196,000</td>
-              <td>1,700,000</td>
-              <td>2,579,000</td>
-              <td>3,482,000</td>
-              <td>4,250,000</td>
+              <td>19 - 30 tuổi</td>
+              <td>1.196.000</td>
+              <td>1.700.000</td>
+              <td>2.579.000</td>
+              <td>3.482.000</td>
+              <td>4.250.000</td>
             </tr>
             <tr>
-              <td>31 - 40 years</td>
-              <td>1,315,600</td>
-              <td>1,874,600</td>
-              <td>2,838,600</td>
-              <td>3,831,500</td>
-              <td>4,709,500</td>
+              <td>31 - 40 tuổi</td>
+              <td>1.315.600</td>
+              <td>1.874.600</td>
+              <td>2.838.600</td>
+              <td>3.831.500</td>
+              <td>4.709.500</td>
             </tr>
             <tr>
-              <td>41 - 50 years</td>
-              <td>1,375,400</td>
-              <td>1,973,400</td>
-              <td>2,990,000</td>
-              <td>4,036,500</td>
-              <td>4,933,500</td>
+              <td>41 - 50 tuổi</td>
+              <td>1.375.400</td>
+              <td>1.973.400</td>
+              <td>2.990.000</td>
+              <td>4.036.500</td>
+              <td>4.933.500</td>
             </tr>
             <tr>
-              <td>51 - 60 years</td>
-              <td>1,435,200</td>
-              <td>2,059,200</td>
-              <td>3,120,000</td>
-              <td>4,212,000</td>
-              <td>5,148,000</td>
+              <td>51 - 60 tuổi</td>
+              <td>1.435.200</td>
+              <td>2.059.200</td>
+              <td>3.120.000</td>
+              <td>4.212.000</td>
+              <td>5.148.000</td>
             </tr>
             <tr>
-              <td>61 - 65 years</td>
-              <td>1,554,800</td>
-              <td>2,230,800</td>
-              <td>3,380,000</td>
-              <td>4,563,000</td>
-              <td>5,577,000</td>
+              <td>61 - 65 tuổi</td>
+              <td>1.554.800</td>
+              <td>2.230.800</td>
+              <td>3.380.000</td>
+              <td>4.563.000</td>
+              <td>5.577.000</td>
             </tr>
-
             <tr class="section-title">
-              <td colspan="6">B. Additional Insurance</td>
+              <td colspan="6">B. Bảo hiểm Bổ sung</td>
             </tr>
             <tr>
-              <td>1 - 3 years</td>
-              <td>3,370,000</td>
-              <td>3,370,000</td>
-              <td>3,370,000</td>
-              <td>5,516,000</td>
-              <td>8,424,000</td>
+              <td>1 - 3 tuổi</td>
+              <td>3.370.000</td>
+              <td>3.370.000</td>
+              <td>3.370.000</td>
+              <td>5.516.000</td>
+              <td>8.424.000</td>
             </tr>
             <tr>
-              <td>4 - 6 years</td>
-              <td>1,900,000</td>
-              <td>1,900,000</td>
-              <td>1,900,000</td>
-              <td>3,153,000</td>
-              <td>4,730,000</td>
+              <td>4 - 6 tuổi</td>
+              <td>1.900.000</td>
+              <td>1.900.000</td>
+              <td>1.900.000</td>
+              <td>3.153.000</td>
+              <td>4.730.000</td>
             </tr>
             <tr>
-              <td>7 - 9 years</td>
-              <td>1,720,000</td>
-              <td>1,720,000</td>
-              <td>1,720,000</td>
-              <td>2,867,000</td>
-              <td>4,300,000</td>
+              <td>7 - 9 tuổi</td>
+              <td>1.720.000</td>
+              <td>1.720.000</td>
+              <td>1.720.000</td>
+              <td>2.867.000</td>
+              <td>4.300.000</td>
             </tr>
             <tr>
-              <td>10 - 18 years</td>
-              <td>1,638,000</td>
-              <td>1,638,000</td>
-              <td>1,638,000</td>
-              <td>2,730,000</td>
-              <td>4,095,000</td>
+              <td>10 - 18 tuổi</td>
+              <td>1.638.000</td>
+              <td>1.638.000</td>
+              <td>1.638.000</td>
+              <td>2.730.000</td>
+              <td>4.095.000</td>
             </tr>
             <tr>
-              <td>19 - 30 years</td>
-              <td>1,560,000</td>
-              <td>1,560,000</td>
-              <td>1,560,000</td>
-              <td>2,600,000</td>
-              <td>3,900,000</td>
+              <td>19 - 30 tuổi</td>
+              <td>1.560.000</td>
+              <td>1.560.000</td>
+              <td>1.560.000</td>
+              <td>2.600.000</td>
+              <td>3.900.000</td>
             </tr>
             <tr>
-              <td>31 - 40 years</td>
-              <td>1,716,000</td>
-              <td>1,716,000</td>
-              <td>1,716,000</td>
-              <td>2,860,000</td>
-              <td>4,290,000</td>
+              <td>31 - 40 tuổi</td>
+              <td>1.716.000</td>
+              <td>1.716.000</td>
+              <td>1.716.000</td>
+              <td>2.860.000</td>
+              <td>4.290.000</td>
             </tr>
             <tr>
-              <td>41 - 50 years</td>
-              <td>1,794,000</td>
-              <td>1,794,000</td>
-              <td>1,794,000</td>
-              <td>2,990,000</td>
-              <td>4,485,000</td>
+              <td>41 - 50 tuổi</td>
+              <td>1.794.000</td>
+              <td>1.794.000</td>
+              <td>1.794.000</td>
+              <td>2.990.000</td>
+              <td>4.485.000</td>
             </tr>
             <tr>
-              <td>51 - 60 years</td>
-              <td>1,872,000</td>
-              <td>1,872,000</td>
-              <td>1,872,000</td>
-              <td>3,120,000</td>
-              <td>4,680,000</td>
+              <td>51 - 60 tuổi</td>
+              <td>1.872.000</td>
+              <td>1.872.000</td>
+              <td>1.872.000</td>
+              <td>3.120.000</td>
+              <td>4.680.000</td>
             </tr>
             <tr>
-              <td>61 - 65 years</td>
-              <td>2,028,000</td>
-              <td>2,028,000</td>
-              <td>2,028,000</td>
-              <td>3,380,000</td>
-              <td>5,070,000</td>
+              <td>61 - 65 tuổi</td>
+              <td>2.028.000</td>
+              <td>2.028.000</td>
+              <td>2.028.000</td>
+              <td>3.380.000</td>
+              <td>5.070.000</td>
             </tr>
-
             <tr class="section-title">
-              <td colspan="6">Other Insurance Options</td>
+              <td colspan="6">Các Tùy chọn Bảo hiểm Khác</td>
             </tr>
             <tr>
-              <td>Personal Accident</td>
-              <td colspan="5">Optional</td>
+              <td>Bảo hiểm Tai nạn Cá nhân</td>
+              <td colspan="5">Tùy chọn</td>
             </tr>
             <tr>
-              <td>Life Insurance</td>
-              <td colspan="5">Optional</td>
+              <td>Bảo hiểm Nhân thọ</td>
+              <td colspan="5">Tùy chọn</td>
             </tr>
             <tr>
-              <td>Dental Insurance (1-18 years)</td>
-              <td>600,000</td>
-              <td>600,000</td>
-              <td>1,500,000</td>
-              <td>2,600,000</td>
-              <td>3,900,000</td>
+              <td>Bảo hiểm Răng (1-18 tuổi)</td>
+              <td>600.000</td>
+              <td>600.000</td>
+              <td>1.500.000</td>
+              <td>2.600.000</td>
+              <td>3.900.000</td>
             </tr>
             <tr>
-              <td>Dental Insurance (19-65 years)</td>
-              <td>490,000</td>
-              <td>490,000</td>
-              <td>1,200,000</td>
-              <td>2,000,000</td>
-              <td>3,000,000</td>
+              <td>Bảo hiểm Răng (19-65 tuổi)</td>
+              <td>490.000</td>
+              <td>490.000</td>
+              <td>1.200.000</td>
+              <td>2.000.000</td>
+              <td>3.000.000</td>
             </tr>
             <tr>
-              <td>Maternity Insurance (18-65 years)</td>
-              <td>Not Available</td>
-              <td>Not Available</td>
-              <td>Not Available</td>
-              <td>4,800,000</td>
-              <td>5,500,000</td>
+              <td>Bảo hiểm Mang thai (18-65 tuổi)</td>
+              <td>Không có</td>
+              <td>Không có</td>
+              <td>Không có</td>
+              <td>4.800.000</td>
+              <td>5.500.000</td>
             </tr>
           </tbody>
         </table>
