feat: explosion insurance

--- a/index.html
+++ b/index.html
@@ -95,8 +95,10 @@
         alt="Bảo hiểm sức khoẻ" srcset="">
       <img onclick="window.location.href='/baohiemoto.html'" class="card-item" src="assets/san-pham/1.png"
         alt="Bảo hiểm ô tô" srcset="">
-      <img class="card-item" src="assets/san-pham/2.png" alt="Bảo hiểm cháy nổ" srcset="">
-      <img class="card-item" src="assets/san-pham/6.png" alt="Bảo hiểm du lịch" srcset="">
+      <img onclick="window.location.href='/baohiemchayno.html'" class="card-item" src="assets/san-pham/2.png"
+        alt="Bảo hiểm cháy nổ" srcset="">
+      <img onclick="window.location.href='/baohiemtravel.html'" class="card-item" src="assets/san-pham/6.png"
+        alt="Bảo hiểm du lịch" srcset="">
       <img class="card-item" src="assets/san-pham/4.png" alt="Bảo hiểm hoạch định" srcset="">
       <img class="card-item" src="assets/san-pham/5.png" alt="Bảo hiểm an khang" srcset="">
     </div>
@@ -116,14 +118,14 @@
         <p>Gói bảo hiểm ưu việt 2025</p>
       </div>
     </div>
-    <div class="card">
+    <div class="card" onclick="window.location.href='/baohiemoto.html'">
       <img src="assets/2.png" alt="Gói bảo vệ tài sản" style="height: 240px; object-fit: cover;">
       <div class="card-content">
         <h3>Bảo hiểm Xe cơ giới</h3>
         <p>Gói bảo hiểm ưu việt 2025</p>
       </div>
     </div>
-    <div class="card">
+    <div class="card" onclick="window.location.href='/baohiemchayno.html'">
       <img src="assets/3.png" alt="Gói đầu tư thông minh" style="height: 240px; object-fit: cover;">
       <div class="card-content">
         <h3>Bảo hiểm Cháy, nổ bắt buộc</h3>
