feat: navigation bar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
     <ul class="navigation-items">
       <li class="">Trang chủ</li>
       <li class="">Bảo hiểm nhân thọ</li>
-      <li class="">Bảo hiểm phi nhân thọ</li>
+      <li class="has-popover">Bảo hiểm phi nhân thọ
+        <div class="popover">
+          <ul class="submenu">
+            <li onclick="window.location.href='/baohiemoto.html'">Bảo hiểm vật chất xe ô tô</li>
+            <li onclick="window.location.href='/baohiemchayno.html'">Bảo hiểm cháy, nổ bắt buộc</li>
+            <li onclick="window.location.href='/index.html'">Bảo hiểm mọi rủi ro tài sản </li>
+            <li onclick="window.location.href='/baohiemsuckhoe.html'">Bảo Việt An Gia </li>
+            <li>Bảo hiểm Intercare </li>
+            <li>Bảo hiểm xe máy</li>
+            <li onclick="window.location.href='/baohiemtravel.html'">Bảo hiểm du lịch Flexi</li>
+          </ul>
+        </div>
+      </li>
       <li class="">Tuyển dụng</li>
       <li class="">Tin tức</li>
     </ul>
@@ -29,20 +41,16 @@
     </div>
   </nav>
 
-  <div class="container">
-
-
-    <div class="video-container">
-      <div style="width: 100%; height: 60vh; position: absolute; top: 0; left: 0; z-index: 10; border-radius: 20px;">
-      </div>
-
-      <iframe width="1038" height="548"
-        src="https://www.youtube.com/embed/fgJ3zyFTFzA?autoplay=1&mute=1&loop=1&playlist=fgJ3zyFTFzA"
-        title="60 năm Giữ trọn niềm tin | Tập Đoàn Bảo Việt" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        controls="0" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <div class="slider-container">
+    <div class="slides">
+      <img class="slide"
+        src="https://scontent.fhan2-4.fna.fbcdn.net/v/t39.30808-6/449314310_856995763130647_8926529213017778028_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeH1p2drtANDyfNN63AN1SpGoTpq0eJmKXyhOmrR4mYpfImSfNU7PjZKB1oVj_O9CXKI2NeKVGB-zCQOtVXap6gZ&_nc_ohc=aPj617KtVT0Q7kNvgHk6_v0&_nc_oc=AdjpoZzWO2OzLR4UvJvPv1JLEeSPjwe3E8SMdSKsdiIZCEHWDwECALmqCM4-Y6tQcA8&_nc_zt=23&_nc_ht=scontent.fhan2-4.fna&_nc_gid=AukTIv8-eq4CiZAVoJP7W_U&oh=00_AYDEUplrhLQ5Lh8bIFaidq7-T5G7d0eBRtoQXtg1fbukQw&oe=67C90927" />
+      <img class="slide"
+        src="https://scontent.fhan2-5.fna.fbcdn.net/v/t39.30808-6/449836050_897737225713190_2662200633534822107_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeGUHSfQjOS65xZPhNWUIXNgsc1poPqGUGOxzWmg-oZQYzCISLm9kTjJ4SOW7ORZjijivziIYBzHbsX1sR0YO9Jz&_nc_ohc=5Z72ZGNKZuEQ7kNvgEQfTBI&_nc_oc=AdhBkdxj969uLvhS1n_PaFqJ7WH6nhiS8gbd8YrG1G3y5rcFPx4pk_Lo_UxUYfxIuHk&_nc_zt=23&_nc_ht=scontent.fhan2-5.fna&_nc_gid=Ahs6BjdHS9akg5pXhkpmXdO&oh=00_AYBnwwz3aAzy2s9n1ZxiiZyuZJuycGhpBwxhtaq6wGHZAA&oe=67C91434" />
+      <img class="slide"
+        src="https://scontent.fhan2-4.fna.fbcdn.net/v/t39.30808-6/466874145_987943703359208_4641189458438712932_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeEsOcmPDwwqp332-lB3y39SDKzxrncMVnQMrPGudwxWdNnnTSG019_M9f0HQoma9yVWI-TCM1bPZEKBlbk1S0uu&_nc_ohc=CocOjhDphIQQ7kNvgFAHVJg&_nc_oc=AdjUz3TpumuI0vf16kA3Yl9ARoWgN_GQkmRfcUCA8HpcBV9xD_c23Npokm69amfKBdo&_nc_zt=23&_nc_ht=scontent.fhan2-4.fna&_nc_gid=Aw47cJzu5WW9GrGsM84MtSC&oh=00_AYApuIB7Jp6d34cqcw6v4BDZxvvxK3ICnpWD7oN1k3kkyw&oe=67C93843"
+        alt="" srcset="">
     </div>
-
   </div>
   </div>
 
