--- a/index.html
+++ b/index.html
@@ -42,15 +42,10 @@
   </nav>
 
   <div class="slider-container">
-    <div class="slides">
-      <img class="slide"
-        src="https://scontent.fhan2-4.fna.fbcdn.net/v/t39.30808-6/449314310_856995763130647_8926529213017778028_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeH1p2drtANDyfNN63AN1SpGoTpq0eJmKXyhOmrR4mYpfImSfNU7PjZKB1oVj_O9CXKI2NeKVGB-zCQOtVXap6gZ&_nc_ohc=aPj617KtVT0Q7kNvgHk6_v0&_nc_oc=AdjpoZzWO2OzLR4UvJvPv1JLEeSPjwe3E8SMdSKsdiIZCEHWDwECALmqCM4-Y6tQcA8&_nc_zt=23&_nc_ht=scontent.fhan2-4.fna&_nc_gid=AukTIv8-eq4CiZAVoJP7W_U&oh=00_AYDEUplrhLQ5Lh8bIFaidq7-T5G7d0eBRtoQXtg1fbukQw&oe=67C90927" />
-      <img class="slide"
-        src="https://scontent.fhan2-5.fna.fbcdn.net/v/t39.30808-6/449836050_897737225713190_2662200633534822107_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeGUHSfQjOS65xZPhNWUIXNgsc1poPqGUGOxzWmg-oZQYzCISLm9kTjJ4SOW7ORZjijivziIYBzHbsX1sR0YO9Jz&_nc_ohc=5Z72ZGNKZuEQ7kNvgEQfTBI&_nc_oc=AdhBkdxj969uLvhS1n_PaFqJ7WH6nhiS8gbd8YrG1G3y5rcFPx4pk_Lo_UxUYfxIuHk&_nc_zt=23&_nc_ht=scontent.fhan2-5.fna&_nc_gid=Ahs6BjdHS9akg5pXhkpmXdO&oh=00_AYBnwwz3aAzy2s9n1ZxiiZyuZJuycGhpBwxhtaq6wGHZAA&oe=67C91434" />
-      <img class="slide"
-        src="https://scontent.fhan2-4.fna.fbcdn.net/v/t39.30808-6/466874145_987943703359208_4641189458438712932_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeEsOcmPDwwqp332-lB3y39SDKzxrncMVnQMrPGudwxWdNnnTSG019_M9f0HQoma9yVWI-TCM1bPZEKBlbk1S0uu&_nc_ohc=CocOjhDphIQQ7kNvgFAHVJg&_nc_oc=AdjUz3TpumuI0vf16kA3Yl9ARoWgN_GQkmRfcUCA8HpcBV9xD_c23Npokm69amfKBdo&_nc_zt=23&_nc_ht=scontent.fhan2-4.fna&_nc_gid=Aw47cJzu5WW9GrGsM84MtSC&oh=00_AYApuIB7Jp6d34cqcw6v4BDZxvvxK3ICnpWD7oN1k3kkyw&oe=67C93843"
-        alt="" srcset="">
-    </div>
+    <video style="width: 100%; height: auto;" autoplay muted loop>
+      <source src="assets/phimdoanhnghiepbaohiem.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
   </div>
   </div>
 
