--- a/baohiemchayno.html
+++ b/baohiemchayno.html
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    <div class="infor-item" style="width: 75%; margin: 50px auto; display: flex; gap: 20px; justify-content: center;">
+    <div class="infor-item" style="margin: 50px auto; display: flex; gap: 20px; justify-content: center;">
       <div class="hightlight-btn">
         <img class="hightlight-btn-img"
           src="https://baovietonline.com.vn/uploads/product/06e0312ccafb770c219eada820290d83.png" alt="" srcset="">
@@ -97,7 +97,7 @@
       </div>
     </div>
 
-    <div class="infor-item" style="width: 75%; margin: 50px auto;">
+    <div class="infor-item" style="flex-direction: column ;margin: 50px auto;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Khách hàng</p>
@@ -110,7 +110,7 @@
       </div>
     </div>
 
-    <div class="infor-item" style="width: 75%; margin: 50px auto;">
+    <div class="infor-item" style="flex-direction: column; margin: 50px auto;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Phạm vi bảo hiểm</p>
@@ -128,7 +128,7 @@
       </div>
     </div>
 
-    <div class="infor-item" style="width: 75%; margin: 50px auto; display: flex; flex-direction: column;">
+    <div class="infor-item" style="flex-direction: column; margin: 50px auto; display: flex; flex-direction: column;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Tài liệu biểu mẫu</p>
