--- a/baohiemoto.html
+++ b/baohiemoto.html
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    <div class="infor-item" style="width: 75%; margin: 50px auto; display: flex; gap: 20px; justify-content: center;">
+    <div class="infor-item">
       <div class="hightlight-btn">
         <img class="hightlight-btn-img"
           src="https://baovietonline.com.vn/uploads/product/638cb03539c9f7cd94102e23ad3aabd8.png" alt="" srcset="">
@@ -89,7 +89,7 @@
       </div>
     </div>
 
-    <div class="infor-item" style="width: 75%; margin: 50px auto;">
+    <div class="infor-item" style="margin: 50px auto; flex-direction: column;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Đối tượng</p>
@@ -100,7 +100,7 @@
       </div>
     </div>
 
-    <div class="infor-item" style="width: 75%; margin: 50px auto;">
+    <div class="infor-item" style="margin: 50px auto; flex-direction: column;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Quyền lợi chính</p>
@@ -132,7 +132,7 @@
       </div>
     </div>
 
-    <div class="infor-item" style="width: 75%; margin: 50px auto; display: flex; flex-direction: column;">
+    <div class="infor-item" style="margin: 50px auto; display: flex; flex-direction: column;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Tài liệu biểu mẫu</p>
