--- a/baohiemsuckhoe.html
+++ b/baohiemsuckhoe.html
@@ -97,7 +97,7 @@
       </div>
     </div>
 
-    <div class="infor-item" style="width: 75%; margin: 50px auto;">
+    <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Đối tượng</p>
@@ -109,7 +109,7 @@
       </div>
     </div>
 
-    <div class="infor-item" style="width: 75%; margin: 50px auto;">
+    <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Quyền lợi chính</p>
@@ -504,7 +504,7 @@
       </div>
     </div>
 
-    <div class="infor-item" style="width: 75%; margin: 50px auto;">
+    <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Biểu phí bảo hiểm</p>
