--- a/baohiemtravel.html
+++ b/baohiemtravel.html
@@ -92,7 +92,7 @@
       </div>
     </div>
 
-    <div class="infor-item" style="width: 75%; margin: 50px auto;">
+    <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Đối tượng</p>
@@ -104,7 +104,7 @@
       </div>
     </div>
 
-    <div class="infor-item" style="width: 75%; margin: 50px auto;">
+    <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Quyền lợi chính</p>
@@ -410,7 +410,8 @@
       </table>
     </div>
 
-    <div class="infor-item" style="width: 75%; margin: 50px auto; display: flex; flex-direction: column;">
+    <div class="infor-item"
+      style="display: flex; flex-direction: column; width: 75%; margin: 50px auto; display: flex; flex-direction: column;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Tài liệu biểu mẫu</p>
