--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
   </nav>
 
   <div class="slider-container">
-    <video style="width: 100%; height: auto;" autoplay muted loop>
-      <source src="public/phimdoanhnghiepbaohiem.mp4" type="video/mp4">
+    <video style="width: 100%; height: auto; border-radius: 10px;" autoplay muted loop>
+      <source
+        src="https://res.cloudinary.com/dwxtfncax/video/upload/v1741279107/Phim_doanh_nghie%CC%A3%CC%82p_Ba%CC%89o_Hie%CC%82%CC%89m_Ba%CC%89o_Vie%CC%A3%CC%82t_-_BaoViet_Insurance_1080p_h264_1_vdpbc7.mp4"
+        type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
@@ -118,35 +120,35 @@
           <br />
           Chăm sóc Y tế cao cấp
         </h3>
-        <p>Gói bảo hiểm ưu việt 2025</p>
+        <p></p>
       </div>
     </div>
     <div class="card" onclick="window.location.href='/baohiemoto.html'">
       <img src="assets/2.png" alt="Gói bảo vệ tài sản" style="height: 240px; object-fit: cover;">
       <div class="card-content">
         <h3>Bảo hiểm Xe cơ giới</h3>
-        <p>Gói bảo hiểm ưu việt 2025</p>
+        <p></p>
       </div>
     </div>
     <div class="card" onclick="window.location.href='/baohiemchayno.html'">
       <img src="assets/3.png" alt="Gói đầu tư thông minh" style="height: 240px; object-fit: cover;">
       <div class="card-content">
         <h3>Bảo hiểm Cháy, nổ bắt buộc</h3>
-        <p>Gói bảo hiểm ưu việt 2025</p>
+        <p></p>
       </div>
     </div>
     <div class="card">
       <img src="assets/4.jpg" alt="Bảo vệ vượt trội" style="height: 240px; object-fit: cover;">
       <div class="card-content">
         <h3>Bảo vệ vượt trội</h3>
-        <p>Gói bảo hiểm ưu việt 2025</p>
+        <p></p>
       </div>
     </div>
     <div class="card">
       <img src="assets/5.jpg" alt="Tích lũy ưu việt" style="height: 240px; object-fit: cover;">
       <div class="card-content">
         <h3>Tích lũy ưu việt</h3>
-        <p>Gói bảo hiểm ưu việt 2025</p>
+        <p></p>
       </div>
     </div>
   </section>
