--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <p class="consultant-title">
             Liên hệ qua Zalo
           </p>
-          <a href="https://zalo.me/84905.499.496">
+          <a href="https://zalo.me/84931909697">
             Mrs.Hương's Zalo
           </a>
         </div>
@@ -149,6 +149,48 @@
       <div class="card-content">
         <h3>Tích lũy ưu việt</h3>
         <p></p>
+      </div>
+    </div>
+  </section>
+
+  <p
+    style="font-size: 25px; text-transform: uppercase; font-weight: 600; color: #0060ae; text-align: center; margin: 0; margin-top: 50px;">
+    Tin tức</p>
+  <section class="container-list" style="justify-content: center;">
+    <div class="card" onclick="window.location.href='/baohiemoto.html'">
+      <img src="https://baovietonline.com.vn/uploads/content/9b9bf22e3dace082cbd365fac8076584.jpg"
+        alt="Gói bảo vệ tài sản" style="height: 240px; object-fit: cover;">
+      <div style="background-color: transparent; color: #0060ae;" class="card-content">
+        <h3 style="font-size: 14px; text-align: left;">Môi trường, bệnh tật và bài toán bảo vệ tài chính: Đâu là lựa
+          chọn thông minh?</h3>
+        <p style="text-align: left;">07/03/2025</p>
+      </div>
+    </div>
+    <div class="card" onclick="window.location.href='/baohiemoto.html'">
+      <img src="https://baovietonline.com.vn/uploads/content/f3476ca39988c0baccfcbeb17fa84497.jpg"
+        alt="Gói bảo vệ tài sản" style="height: 240px; object-fit: cover;">
+      <div style="background-color: transparent; color: #0060ae;" class="card-content">
+        <h3 style="font-size: 14px; text-align: left;">Bảo Việt Sơn La tạm ứng 700 triệu đồng trong vụ tai nạn giao
+          thông nghiêm trọng tại Yên Châu (Sơn La)</h3>
+        <p style="text-align: left;">07/03/2025</p>
+      </div>
+    </div>
+    <div class="card" onclick="window.location.href='/baohiemoto.html'">
+      <img src="https://baovietonline.com.vn/uploads/content/3c6450c341c3c01f40b3deb94e8a13ed.jpg"
+        alt="Gói bảo vệ tài sản" style="height: 240px; object-fit: cover;">
+      <div style="background-color: transparent; color: #0060ae;" class="card-content">
+        <h3 style="font-size: 14px; text-align: left;">Bảo hiểm Bảo Việt hợp tác cùng Eximbank triển khai chương trình
+          hoàn tiền 10% phí bảo hiểm</h3>
+        <p style="text-align: left;">07/03/2025</p>
+      </div>
+    </div>
+    <div class="card" onclick="window.location.href='/baohiemoto.html'">
+      <img src="https://baovietonline.com.vn/uploads/content/ac97835d1c32a00e30a1905cdf8e1d6c.jpg"
+        alt="Gói bảo vệ tài sản" style="height: 240px; object-fit: cover;">
+      <div style="background-color: transparent; color: #0060ae;" class="card-content">
+        <h3 style="font-size: 14px; text-align: left;">Bảo hiểm Bảo Việt và Mitsubishi hợp tác triển khai chương trình
+          ưu đãi đặc quyền dành cho khách hàng mua xe Triton</h3>
+        <p style="text-align: left;">07/03/2025</p>
       </div>
     </div>
   </section>
