--- a/baohiemtravel.html
+++ b/baohiemtravel.html
@@ -66,7 +66,8 @@
       </div>
     </div>
 
-    <div class="infor-item" style="width: 75%; margin: 50px auto; display: flex; gap: 20px; justify-content: center;">
+    <div class="infor-item" id="hightlight"
+      style="width: 75%; margin: 50px auto; display: flex; gap: 20px; justify-content: center;">
       <div class="hightlight-btn">
         <img class="hightlight-btn-img"
           src="https://baovietonline.com.vn/uploads/product/0537f8e14db87f4cfe2276e9409a5317.png" alt="" srcset="">
@@ -108,7 +109,7 @@
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Quyền lợi chính</p>
-      <div style="display: flex; justify-content: center; gap: 20px">
+      <div id="benefit-tabs" style="display: flex; justify-content: center; gap: 20px">
         <div class="benefits-tab">
           <p style="font: 14px; margin: 0;">Bảo hiểm tai nạn cá nhân</p>
           <p style="font-size: 12px; color:#666666">BChi trả các trường hợp ốm đau, tai nạn hay thương tật có xác nhận.
@@ -415,7 +416,7 @@
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Tài liệu biểu mẫu</p>
-      <div style="display: flex; gap: 20px; width: 100%; align-items: start;">
+      <div id="documentation" style="display: flex; gap: 20px; width: 100%; align-items: start;">
         <img
           style="width: 270px; height: 240px; object-fit: contain; border-top-left-radius: 10px; border-bottom-right-radius: 10px;"
           src="https://baovietonline.com.vn/templates/images/tai_lieu_bieu_mau.png" alt="" srcset="">
