--- a/baohiemchayno.html
+++ b/baohiemchayno.html
@@ -66,7 +66,8 @@
       </div>
     </div>
 
-    <div class="infor-item" style="margin: 50px auto; display: flex; gap: 20px; justify-content: center;">
+    <div class="infor-item" id="hightlight"
+      style="margin: 50px auto; display: flex; gap: 20px; justify-content: center;">
       <div class="hightlight-btn">
         <img class="hightlight-btn-img"
           src="https://baovietonline.com.vn/uploads/product/06e0312ccafb770c219eada820290d83.png" alt="" srcset="">
@@ -132,7 +133,7 @@
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Tài liệu biểu mẫu</p>
-      <div style="display: flex; gap: 20px; width: 100%; align-items: start;">
+      <div id="documentation" style="display: flex; gap: 20px; width: 100%; align-items: start;">
         <img
           style="width: 270px; height: 240px; object-fit: contain; border-top-left-radius: 10px; border-bottom-right-radius: 10px;"
           src="https://baovietonline.com.vn/templates/images/tai_lieu_bieu_mau.png" alt="" srcset="">
