--- a/baohiemoto.html
+++ b/baohiemoto.html
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    <div class="infor-item">
+    <div class="infor-item" id="hightlight">
       <div class="hightlight-btn">
         <img class="hightlight-btn-img"
           src="https://baovietonline.com.vn/uploads/product/638cb03539c9f7cd94102e23ad3aabd8.png" alt="" srcset="">
@@ -104,7 +104,7 @@
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Quyền lợi chính</p>
-      <div style="display: flex; justify-content: center; gap: 20px">
+      <div style="display: flex; justify-content: center; gap: 20px" id="benefit-tabs">
         <div class="benefits-tab">
           <p style="font: 14px; margin: 0;">Bồi thường Bảo hiểm vật chất xe</p>
           <p style="font-size: 12px; color:#666666">Bảo Hiểm Bảo Việt chịu trách nhiệm bồi thường cho Người được bảo
@@ -136,7 +136,7 @@
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Tài liệu biểu mẫu</p>
-      <div style="display: flex; gap: 20px; width: 100%; align-items: start;">
+      <div id="documentation" style="display: flex; gap: 20px; width: 100%; align-items: start;">
         <img
           style="width: 270px; height: 240px; object-fit: contain; border-top-left-radius: 10px; border-bottom-right-radius: 10px;"
           src="https://baovietonline.com.vn/templates/images/tai_lieu_bieu_mau.png" alt="" srcset="">
