--- a/baohiemsuckhoe.html
+++ b/baohiemsuckhoe.html
@@ -69,7 +69,7 @@
       </div>
     </div>
 
-    <div class="infor-item" style="width: 75%; margin: 50px auto; display: flex; gap: 20px;">
+    <div class="infor-item" id="hightlight" style="width: 75%; margin: 50px auto; display: flex; gap: 20px;">
       <div class="hightlight-btn">
         <img class="hightlight-btn-img"
           src="https://baovietonline.com.vn/uploads/product/27720c8da207e15f5055740e1e37bdb3.png" alt="" srcset="">
@@ -113,7 +113,7 @@
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Quyền lợi chính</p>
-      <div>
+      <div style="max-width: 100%; overflow-x: scroll;">
         <table border="0" cellpadding="0" cellspacing="0" style="width:100%" class="table table-bordered">
           <thead>
             <tr>
@@ -508,7 +508,7 @@
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Biểu phí bảo hiểm</p>
-      <div>
+      <div style="max-width: 100%; overflow-x: scroll;">
         <table style="width: 100%;">
           <thead>
             <tr>
